# ConfigForge

./: .gitignore  LICENSE  Makefile  README.md  go.mod  pyproject.toml  todo.md
.github/workflows/: go.yml
cmd/: main.go
internal/cli/: cli.go
internal/config/: config.go
internal/llm/: llm.go
internal/plugin/: docker.go  github.go  go.go  helpers.go  loader.go  node.go  plugin.go  python.go
